# ad-metrics

./: .gitignore  README.md  TRACKING_IMPLEMENTATION_SUMMARY.md  coverage.json  pyproject.toml  setup.py
admetrics/: __init__.py
admetrics/detection/: __init__.py  ap.py  iou.py
admetrics/occupancy/: __init__.py  occupancy.py
admetrics/planning/: __init__.py  planning.py
admetrics/prediction/: trajectory.py
admetrics/simulation/: README.md  __init__.py  alignment_metrics.py  camera_metrics.py  dynamics_metrics.py  lidar_metrics.py  noise_metrics.py  occlusion_metrics.py  radar_metrics.py  semantic_metrics.py  sensor_quality.py  sim2real_metrics.py  temporal_metrics.py  weather_metrics.py
admetrics/tracking/: __init__.py  tracking.py
admetrics/utils/: visualization.py
admetrics/vectormap/: __init__.py  vectormap.py
docs/: API_INTERFACE_REFERENCE.md  API_INTERFACE_REFERENCE_UPDATE.md  API_REFERENCE_UPDATE.md  END_TO_END_METRICS.md  METRICS_REFERENCE.md  OCCUPANCY_METRICS.md  PLANNING_METRICS.md  PLANNING_METRICS_RESEARCH.md  PLANNING_TEST_COVERAGE_REPORT.md  PLANNING_TEST_IMPLEMENTATION_SUMMARY.md  SIMULATION_METRICS_RESEARCH.md  SIMULATION_QUALITY.md  TRACKING_METRICS.md  VECTORMAP_METRICS.md  api_reference.md  quick_start.md
examples/: end_to_end_evaluation.py  kitti_evaluation.py  nuscenes_evaluation.py  occupancy_evaluation.py  planning_advanced_features_example.py  planning_nuplan_scoring_example.py  simulation_quality_evaluation.py  trajectory_prediction.py  vectormap_evaluation.py
tests/: conftest.py  test_occlusion_visibility.py  test_occupancy.py  test_planning.py  test_semantic_consistency.py  test_simulation.py  test_tracking.py  test_trajectory.py  test_utils.py  test_vectormap.py  test_vehicle_dynamics.py  test_weather_simulation.py
tools/: quick_start_runner.py
