[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "admetrics"
version = "0.1.0"
description = "Comprehensive metrics library for autonomous driving: detection, tracking, prediction, and localization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AD-Metrics Contributors"}
]
keywords = ["autonomous-driving", "metrics", "3d-detection", "tracking", "trajectory-prediction", "localization", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.3.0",
    "open3d>=0.13.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
all = [
    "metrics3d[viz,dev]",
]

[project.urls]
Homepage = "https://github.com/naurril/ad-metrics"
Documentation = "https://github.com/naurril/ad-metrics/docs"
Repository = "https://github.com/naurril/ad-metrics"
"Bug Tracker" = "https://github.com/naurril/ad-metrics/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["admetrics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=admetrics --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
